Add resident
