# internal/models/cat.go
@@ -2,6 +2,10 @@ package models
 
 import "time"
 
+type CatChipNumber struct {
+	ChipNumber string `json:"chipNumber"`
+}
+
 type Cat struct {
 	Nickname                 string    `json:"nickname"`
 	PhotoUrl                 string    `json:"photoUrl"`
@@ -9,10 +13,6 @@ type Cat struct {
 	Age                      int       `json:"age"`
 	ChipNumber               string    `json:"chipNumber"`
 	DateOfAdmissionToShelter time.Time `json:"dateOfAdmissionToShelter"`
-}
-
-type CatChipNumber struct {
-	ChipNumber string `json:"chipNumber"`
 }
 
 type CreateCatRequest struct {
